--- a/src/main/resources/templates/Register/registerForm.html
+++ b/src/main/resources/templates/Register/registerForm.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -14,10 +14,15 @@
             <input type="text" th:field="*{name}" class="form-control" id="username" required>
         </div>
         <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
+            <label for="email" class="form-label">Email</label>
+            <input type="email" th:field="*{email}" class="form-control" id="email" required>
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form_label">Password</label>
             <input type="password" th:field="*{password}" class="form-control" id="password" required>
         </div>
-        <button type="submit" class="btn btn-primary">Register</button>
+        <button type="submit" class="btn btn-primary" >Register</button>
+
     </form>
 </div>
 </body>
