--- a/src/main/resources/templates/HomePage/homePage.html
+++ b/src/main/resources/templates/HomePage/homePage.html
@@ -19,10 +19,14 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="/homePage">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" th:if="${!isLoggedIn}">
                     <a class="nav-link" href="/login">Login</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" th:if="${isLoggedIn}">
+                    <a class="nav-link" href="/logout">Logout</a>
+                </li>
+
+                <li class="nav-item" th:if="${!isLoggedIn}">
                     <a class="nav-link" href="/register">Register</a>
                 </li>
             </ul>
