--- a/src/main/resources/templates/Expenses/add_category.html
+++ b/src/main/resources/templates/Expenses/add_category.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Add Category</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-$END$
+
+<div class="container mt-5">
+    <h1 class="text-center mb-4">Add New Category</h1>
+
+    <form th:action="@{/expenses/add_category}" th:object="${category}" method="post">
+        <div class="form-group">
+            <label for="name">Category Name:</label>
+            <input type="text" class="form-control" id="name" th:field="*{name}" required />
+        </div>
+        <div class="form-group text-center">
+            <button type="submit" class="btn btn-success">Add Category</button>
+        </div>
+    </form>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
 </html>
