--- a/src/main/resources/templates/Expenses/track_expenses.html
+++ b/src/main/resources/templates/Expenses/track_expenses.html
@@ -40,7 +40,7 @@
 
         <label for="categories">Categories:</label>
         <select id="categories" th:field="*{categories}" multiple>
-            <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
+            <option th:each="category : ${categoryList}" th:value="${category.id}" th:text="${category.name}"></option>
         </select>
 
         <button type="submit">Create Expense</button>
