--- a/src/main/resources/templates/Expenses/track_expenses.html
+++ b/src/main/resources/templates/Expenses/track_expenses.html
@@ -50,6 +50,9 @@
                         <button type="submit" class="btn btn-danger btn-sm">
                             Usuń
                         </button>
+                        <a th:href="@{/expenses/edit/{id}(id=${expense.id})}" class="btn btn-primary btn-sm">
+                            Edit
+                        </a>
                     </td>
                 </form>
             </tr>
