--- a/src/main/resources/templates/Expenses/track_expenses.html
+++ b/src/main/resources/templates/Expenses/track_expenses.html
@@ -21,6 +21,11 @@
 </head>
 <body>
 <div class="container mt-5">
+    <a th:href="@{/}" class="btn btn-info back-button">
+        Back
+    </a>
+
+
     <h1 class="text-center mb-4">Expense Tracker</h1>
 
     <div class="expense-list mb-5">
@@ -66,7 +71,6 @@
         </button>
     </div>
 
-    <!-- Modal dodawania wydatku -->
     <div class="modal fade" id="addExpenseModal" tabindex="-1" aria-labelledby="addExpenseModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
